--- a/index.html
+++ b/index.html
@@ -401,6 +401,33 @@
             </div>
         </section>
 
+        <!-- Official Google Reviews Badge -->
+<div style="text-align:center; padding:40px 20px;">
+  <h1>Our Google Reviews</h1>
+  
+  <!-- Google Logo -->
+  <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" 
+       alt="Google" style="height:30px; margin:20px 0;">
+  
+  <!-- Rating -->
+  <div style="font-size:48px; color:#FFD700; margin:10px 0;">
+    ★★★★★
+  </div>
+  <p style="font-size:20px; color:#333;">
+    <strong>4.8 out of 5</strong>
+  </p>
+  <p style="color:#666; margin-bottom:30px;">
+    Based on 4 reviews
+  </p>
+  
+  <!-- Direct link to your reviews -->
+  <a href="https://share.google/AMiqIL995eCtWxvWn" 
+     target="_blank"
+     style="display:inline-block; background:#4285f4; color:white; padding:15px 30px; border-radius:5px; text-decoration:none; font-weight:bold;">
+    Read Reviews on Google
+  </a>
+</div>
+
         <!-- Footer Section -->
         <section class="footer-section">
             <div class="footer-container">
