--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
             </article>
             <aside class="contact-form-container">
-                <h2 class="form-title">Get Your Free Quote!!</h2>
+                <h2 class="form-title">Winchester Introductory Cleaning Offer: 1 Hour General Clean for Just £19!</h2>
                 <form class="contact-form" id="contactForm" aria-label="Contact form">
                     <div class="form-row">
                         <div class="form-group">
@@ -424,19 +424,19 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="email">Email *</label>
-                            <input type="email" id="email" name="email" required aria-required="true">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" aria-required="true">
                         </div>
                         <div class="form-group">
-                            <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone">
+                            <label for="phone">Phone Number *</label>
+                            <input type="tel" id="phone" name="phone" required>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="message">Message *</label>
                         <textarea id="message" name="message" rows="3" placeholder="Tell us about your cleaning requirements..." required aria-required="true"></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
+                    </div> -->
+                    <button type="submit" class="submit-btn">Claim Your Fixed Rate Clean</button>
                 </form>
             </aside>
         </div>
