--- a/generalcleaning/index.html
+++ b/generalcleaning/index.html
@@ -392,13 +392,31 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="relative bg-gray-900 bg-cover bg-center h-96 flex items-center justify-center shadow-lg" style="background-image: url('../webimg/studio-cleaning.webp')">
-        <div class="absolute inset-0 bg-bantha-dark opacity-70"></div>
-        <div class="hero-content relative z-10 text-center max-w-4xl px-4">
-            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white mb-4 leading-tight">General Cleaning Services</h1>
-            <p class="text-lg text-gray-200">Bantha Cleaning provides affordable, reliable routine house cleaning services across Hampshire and Surrey. Our expert team focuses on maintaining the cleanliness and comfort of your home, covering all essential areas to keep your space neat and welcoming every week. Choose from weekly, fortnightly, or monthly cleaning schedules.</p>
+<section class="relative bg-gray-900 bg-cover bg-center py-20 flex items-center justify-center shadow-lg" style="background-image: url('../webimg/studio-cleaning.webp')">
+    <div class="absolute inset-0 bg-bantha-dark opacity-70"></div>
+    <div class="hero-content relative z-10 text-center max-w-4xl px-4">
+        <span class="inline-block text-sm font-semibold uppercase tracking-wider text-white bg-bantha-blue py-2 px-4 rounded-full mb-4 shadow-lg">
+            Serving Winchester City & Surrounding Villages
+        </span>
+        <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white mb-4 leading-tight">
+            General Cleaning Services
+        </h1>
+        <p class="text-xl sm:text-2xl text-gray-200 mb-8">
+            Bantha Cleaning provides affordable, reliable routine house cleaning services across Hampshire and Surrey. Our expert team focuses on maintaining the cleanliness and comfort of your home, covering all essential areas to keep your space neat and welcoming every week. Choose from weekly, fortnightly, or monthly cleaning schedules.
+        </p>
+        <div class="flex flex-col sm:flex-row justify-center gap-4">
+            <a href="../contact/" class="inline-block bg-bantha-blue hover:bg-blue-700 text-white font-bold py-4 px-8 rounded-xl shadow-lg transition duration-300 transform hover:scale-105">
+                Request Your Free Quote
+            </a>
+            <a href="tel:+447825183734" class="inline-block bg-bantha-green hover:bg-green-700 text-white font-bold py-4 px-8 rounded-xl shadow-lg transition duration-300 transform hover:scale-105">
+                Call: 07825 183734
+            </a>
         </div>
-    </section>
+        <p class="mt-4 text-sm text-gray-300 font-medium">
+            100% Satisfaction Guaranteed | Fully Insured & Trained Team
+        </p>
+    </div>
+</section>
 
     <!-- Main Content Section -->
     <article class="py-16 bg-white">
